Finished text of sections in PT.

--- a/pt/index.html
+++ b/pt/index.html
@@ -74,18 +74,18 @@
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Workplace Resources</h2>
-                <p>A área de WR visa expandir as possibilidades do mundo conectado, tornando os ambientes de trabalho inspiradores, eficientes e equipados com tecnologias inovadoras que elevem o potencial de nossas pessoas.</p>
+                <p class="tile-paragraph">A área de WR visa expandir as possibilidades do mundo conectado, tornando os ambientes de trabalho inspiradores, eficientes e equipados com tecnologias inovadoras que elevem o potencial de nossas pessoas.</p>
               </div>
             </div></a>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
-            <a href=""><div class="ns_tile_element home cta-right" id="element_with_image">
+            <a href="it.html"><div class="ns_tile_element home cta-right" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
-                <h2>Projeto &amp; Obra</h2>
-                <p style="color:#f44336;">[Insert text]</p>
+                <h2>IT Tools</h2>
+                <p class="tile-paragraph">Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
               </div>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/1433.jpg">
             </div></a>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12">
@@ -95,7 +95,7 @@
               </div>
               <div class="col-xs-12">
                 <h2><img src="assets/img/juntossomosblack.png"></h2>
-                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
+                <p>Vocês já viram as surpresas que preparamos para os primeiros dias de lançamento? Confira a agenda do #juntossomosNokia e programe-se para estar com a gente na celebração da casa nova!</p>
               </div>
               <span class="cta">Clique para ver mais</span>
             </div></a>
@@ -106,7 +106,7 @@
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Localização e transporte</h2>
-                <p style="color:#f44336;">[Insert text]</p>
+                <p class="tile-paragraph">Veja informações de endereço do novo escritório, estacionamento e fretado</p>
               </div>
             </div></a>
           </div>
@@ -115,21 +115,9 @@
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>RH</h2>
-                <p style="color:#f44336;">[Input text]</p>
+                <p class="tile-paragraph">Veja aqui as informações e contatos principais de RH</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
-            </div></a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-12">
-            <a href="it.html"><div class="ns_tile_element home cta-center" id="element_without_image">
-              <div class="col-xs-12 image-left image-right">
-                <img style="width:100%;" src="assets/img/1433.jpg">
-              </div>
-              <div class="col-xs-12">
-                <h2>IT Tools</h2>
-                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
-              </div>
-              <span class="cta">Clique para ver mais</span>
             </div></a>
           </div>
         </div>
@@ -141,7 +129,7 @@
           <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
-                <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                <a id="click2" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       #proud2beNokia
@@ -149,14 +137,29 @@
                     </h4>
                   </div>
                 </a>
-                <div class="panel-collapse collapse in" id="collapse2">
-                  <a href="http://zinacms.int.net.nokia.com/" target="_blank"><div class="panel-body">
+                <div class="panel-collapse collapse in" id="collapse1">
+                  <div class="panel-body">
                     <div class="col-xs-offset-4 col-xs-4"><img style="width:100%" src="assets/img/p2bn.png" alt=""></div>
                     <div class="col-xs-9"></div>
-                    <div class="col-xs-12"><p>Agora que estamos todos juntos, o #proud2beNokia conta com você para realizarmos ainda mais! Nosso calendário de atividades está disponível aqui e contamos com sua participação em nossas campanhas e eventos. </p>
+                    <div class="col-xs-12"><p>Agora que estamos todos juntos, o #proud2beNokia conta com você para realizarmos ainda mais! Participe de nossas campanhas recorrentes e fique de olho no calendário do segundo semestre que será divulgado em breve em nossos canais!</p>
                     <h4><strong>Campanhas recorrentes</strong></h4>
                     <p>Doe Lacres: Nas áreas de café, você encontra garrafas de vidro onde pode depositar seus lacres de latinha. Nós juntamos e, a cada 100 garrafas pet de 2L com lacres, nós doamos uma cadeira de rodas em parceria com o Projeto Lacre Amigo!</p>
                     <p>Em um ano (desde maio de 2016) nós doamos TRÊS cadeiras de rodas com a sua ajuda! Funcionários continuam mobilizando amigos e familiares e é por isso que temos avançado com essa campanha. Doe o seu lacre!</p></div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      E-business park
+                      <i id="collapse-fontawe2" class="fa fa-minus pull-right"></i>
+                    </h4>
+                  </div>
+                </a>
+                <div class="panel-collapse collapse" id="collapse2">
+                  <a href="http://www.ebpark.com.br/" target="_blank"><div class="panel-body">
+                    <div class="col-xs-12"><p>Veja aqui informações sobre o condomínio empresarial onde estamos inseridos e suas conveniências. </p></div> <span style="background:#4771a2; color:white; display: inline-block; float: right; padding: 5px;">Clique para ver mais</span>
                   </div></a>
                 </div>
               </div>
