--- a/pt/it.html
+++ b/pt/it.html
@@ -44,7 +44,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12">
-          <h2>IT: Perguntas freqüentes</h2>
+          <h2>IT: Perguntas frequentes</h2>
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
                 <a id="click1" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
@@ -146,8 +146,8 @@
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_without_image">
             <div class="col-xs-12">
-              <h2>Não tenho mais aparelho de ramal. Como receberei ligações?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quoO padrão da Nokia é a utilização do Jabber. Você só poderá receber ligações externas se tiver o celular cadastrado no diretório corporativo. Para atualizar, clique neste link: <a href="https://uim.app.alcatel-lucent.com/" class="standard">https://uim.app.alcatel-lucent.com/</a></p>
+              <h2>NÃO TENHO MAIS TELEFONE FIXO (PABX). COMO RECEBEREI LIGAÇÕES?</h2>
+              <p>O padrão da Nokia é a utilização do Jabber. Você só poderá receber ligações externas se tiver o celular cadastrado no diretório corporativo. Para atualizar, clique neste link: <a href="https://uim.app.alcatel-lucent.com/" class="standard">https://uim.app.alcatel-lucent.com/</a></p>
               <p>Para usar o Jabber é recomendado o uso de um headphone USB - disponível no catálogo. Mas a maioria dos fones de ouvido que acompanham celulares funcionam com o Jabber. </p>
             </div>
           </div>
