--- a/pt/jsn.html
+++ b/pt/jsn.html
@@ -40,6 +40,22 @@
       </div>
     </div>
   </section>
+  <section class="ns_tiles">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12">
+              <h2>Bem-vindos</h2>
+              <p>Nesta semana de inauguração, queremos que todos vocês venham conhecer nossa nova casa. Para que todos possam aproveitar sem que haja excesso de circulação e para que consigamos recebê-los e tirar suas possíveis dúvidas da melhor forma possível, dividimos todos em 3 dias diferentes, respeitando critérios de área. Você recebeu a sua data por e-mail, como uma sugestão para que você venha na data indicada, conheça o escritório e aproveite as surpresas que preparamos.</p>
+              <p>Durante os outros dois dias da semana (com exceção da sexta-feira), trabalhe normalmente a partir do seu escritório usual (Prédio antigo Lapa, Prédio Anchieta ou Home Office). Dessa forma conseguimos dar um atendimento exclusivo aos grupos que vêm conhecer o escritório naquele dia.</p>
+              <p>Estamos contando com sua presença!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="ns_timeline">
     <div class="container-fluid">
       <div class="row">
@@ -55,9 +71,7 @@
                 <div class="timeline-body">
                   <ul>
                     <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
-                    <li>Também te convidamos a usar azul neste dia, combinando com a decoração especial que preparamos para a inauguração</li>
-                    <li>Procure o fotógrafo no Átrio das 9h às 12h e tire sua foto! (enviada posteriormente por e-mail)</li>
-                    <li>Esteja no átrio às 16:00 para o townhall com o Dimitri e o Cleri, que querem dar pessoalmente as boas-vindas a todos nós</li>
+                    <li>Use seu vale surpresa para retirar seu milk shake na entrada lateral do prédio! </li>
                     <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
                   </ul>
                 </div>
@@ -72,8 +86,9 @@
                 </div>
                 <div class="timeline-body">
                   <ul>
-                    <li>Das 9h às 12h e das 14h às 17h, faça sua caricatura com o xxx que estará na recepção, perto da entrada. Tiraremos cópia da sua caricatura e colocaremos num painel especial que mostra a cara da nova Nokia!</li>
-                    <li>Das 11h às 14h, o food truck xxx te receberá com um milk shake refrescante. São inúmeros sabores!</li>
+                    <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
+                    <li>Use seu vale surpresa para retirar seu picolé Rochina no átrio</li>
+                    <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
                   </ul>
                 </div>
               </div>
@@ -87,9 +102,9 @@
                 </div>
                 <div class="timeline-body">
                   <ul>
-                    <li>Das 9h às 12h e das 14h às 17h, faça sua caricatura com o xxx que estará na recepção, perto da entrada. Tiraremos cópia da sua caricatura e colocaremos num painel especial que mostra a cara da nova Nokia!</li>
-                    <li>Das 11h às 14h, procure o carrinho e retire sua pipoca para celebrar esses primeiros dias de lançamento</li>
-                    <li>Durante todo o dia, a equipe do bynd estará a sua espera no átrio com um estande especial para te ajudar a instalar e usar o aplicativo!</li>
+                    <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
+                    <li>Use seu vale surpresa para retirar seu brigadeiro no átrio </li>
+                    <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
                   </ul>
                 </div>
               </div>
@@ -103,8 +118,11 @@
                 </div>
                 <div class="timeline-body">
                   <ul>
-                    <li>Das 9h às 12h e das 14h às 17h, faça sua caricatura com o xxx que estará na recepção, perto da entrada. Tiraremos cópia da sua caricatura e colocaremos num painel especial que mostra a cara da nova Nokia!</li>
-                    <li>Das 11h às 14h, retire seu café especial</li>
+                    <li>Das 9h às 13h e das 14h às 18h, faça sua caricatura com o profissional que estará no átrio. Tiraremos cópia da sua caricatura e colocaremos num painel especial que mostra a cara da nova Nokia!</li>
+                    <li>Participe do Desafio da Caricatura e concorra ao sorteio de mochilas Nokia (a ser realizado durante o townhall das 14h)</li>
+                    <li>Não se esqueça de passar no totem de fotos e tirar a sua para guardar esse momento como lembrança! Compartilhe a sua foto nas redes sociais! </li>
+                    <li>Às 14h, Dimitri Diliani e Cleri Inhauser estarão no átrio para dar as boas-vindas oficiais e todos estão convidados. Dirija-se ao local ou, se preferir, acomode-se nas estacoes de trabalho ou nos espaços dos outros andares para ouvir o evento – não haverá apresentação de slides</li>
+                    <li>Retire seu cupcake comemorativo na saída! </li>
                   </ul>
                 </div>
               </div>
