--- a/pt/modern.html
+++ b/pt/modern.html
@@ -144,10 +144,11 @@
                   <div class="panel-body">
                     <ul>
                       <li>Papéis (documentos, contratos, etc);</li>
-                      <li> Livros, cadernos e agendas;</li>
-                      <li> Equipamentos (celulares, tablets e notes);</li>
-                      <li> Calendários;</li>
-                      <li> Porta-Retratos ou fotos</li>
+                      <li>Livros, cadernos e agendas;</li>
+                      <li>Equipamentos (celulares, tablets e notes);</li>
+                      <li>Calendários;</li>
+                      <li>Porta-Retratos ou fotos</li>
+                      <li>Quaisquer objetos pessoais</li>
                     </ul>
                   </div>
               </div>
