--- a/pt/section.html
+++ b/pt/section.html
@@ -47,8 +47,9 @@
           <div class="ns_tile_element" id="element_without_image">
             <div class="col-xs-12 col-sm-6">
               <h2>Long tile</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
-              <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
+              <p>Nesta semana de inauguração, queremos que todos vocês venham conhecer nossa nova casa. Para que todos possam aproveitar sem que haja excesso de circulação e para que consigamos recebê-los e tirar suas possíveis dúvidas da melhor forma possível, dividimos todos em 3 dias diferentes, respeitando critérios de área. Você recebeu a sua data por e-mail, como uma sugestão para que você venha na data indicada, conheça o escritório e aproveite as surpresas que preparamos.</p>
+              <p>Durante os outros dois dias da semana (com exceção da sexta-feira), trabalhe normalmente a partir do seu escritório usual (Prédio antigo Lapa, Prédio Anchieta ou Home Office). Dessa forma conseguimos dar um atendimento exclusivo aos grupos que vêm conhecer o escritório naquele dia.</p>
+              <p>Estamos contando com sua presença!</p>
             </div>
             <div class="col-xs-12 col-sm-6">
               <img src="http://placehold.it/400x300" alt="">
