--- a/pt/transport.html
+++ b/pt/transport.html
@@ -47,16 +47,15 @@
           <div class="ns_tile_element" id="element_with_image">
             <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/fake-map.png">
               <div class="col-xs-6 col-sm-6 col-md-6">
-                <h2>Acesso ao site</h2>
-                <p>Nosso escritório não possui lugares definidos, entretanto sugerimos bolhas de ocupação (bubbles) por áreas ou negócio, mantendo a sinergia entre as áreas. Clicando aqui você saberá onde é a sua bubble.</p>
-                <p class="text-center"><big style="font-size: 1.3em;">Rua Werner Von Siemens, nº 111 Prédio 19 – Espaços 3 e 4 – Lapa de Baixo – São Paulo – SP – CEP 05069-900 </big></p>
+                <h2>NOSSO NOVO ENDEREÇO</h2>
+                <p class="text-center" style="display:block; margin-top:35%;"><big style="font-size: 1.25em;">Rua Werner Von Siemens, nº 111 Prédio 19 – Espaços 3 e 4 – Lapa de Baixo – São Paulo – SP – CEP 05069-900 </big></p>
               </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_with_image">
             <div class="col-xs-6">
-              <h2>Estacionamiento</h2>
+              <h2>Estacionamento</h2>
               <p>Estacionamento para funcionários e externos:</p>
               <ul>
                   <li>XX vagas área interna</li>
@@ -67,6 +66,49 @@
             </div>
             <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/parking.jpg">
           </div>
+        </div>
+                <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12 col-sm-6">
+              <h2>Fretado</h2>
+              <h3>Definições do Fretamento</h3>
+              <p>Conforme foi anunciado ao longo dos últimos meses, foi criado um comitê (CMT) que se dedicou a buscar soluções para facilitar esse momento de transição e assim a Nokia optou por oferecer transporte fretado em São Paulo, a partir do dia 2 de maio e durante o primeiro ano da mudança de escritório. <br>Para a definição dos colaboradores que utilizariam o transporte fretado, optou-se pela inscrição através de um link, nos 3 diferentes horários e que se encerrou quando da totalidade das vagas disponíveis preenchidas. <br>Nessas reuniões do Comitê também foi decidido que o transporte seria estendido também à estagiários e terceiros.</p>
+              <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#exampleModal">Regras de uso</button>
+              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel"><strong>Regras de uso</strong>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span></h5>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      Para o melhor aproveitamento de todos foram definidas algumas regras para o uso deste transporte:
+                      <ul></ul>
+                      <li>As pessoas inscritas para o fretado não terão vaga no estacionamento do escritório Lapa. Porém, caso o inscrito receba vale transporte, o benefício será mantido normalmente;</li>
+                      <li>Só haverá a opção de registrar-se para fazer uso do fretado considerando ida e volta. Não é possível inscrever-se somente para uma opção;</li>
+                      <li>O acesso dos fretados será pela portaria da Marginal. Os passageiros deverão desembarcar no recuo próprio para este fim e caminhar até a entrada do escritório, bem como repetir o processo na volta;</li>
+                      <li>Os ônibus respeitarão os horários previstos tanto na ida quanto na volta, por isso, pedimos a todos que estejam no local com 10 minutos de antecedência;</li>
+                      <li>Aqueles que forem de carro até a Anchieta poderão deixar seus veículos no estacionamento até que seja necessário desocupar o espaço. Após isso, os veículos deverão ser estacionados em outro local, sendo a escolha deste e o custo por conta de cada usuário;</li>
+                      <li>Em caso de desocupação total do prédio Anchieta, o ponto de saída dos fretados será alterado, sendo o novo ponto ainda a definir;</li>
+                      <li>O ônibus fará o caminho da Anchieta-Lapa e Lapa-Anchieta. Não haverá nenhum outro ponto de parada, mesmo que seja comum à rota;</li>
+                      <li>Não serão permitidos passageiros em pé;</li>
+                      <li>Se você escolher o horário 1, 2 ou 3, deverá obrigatoriamente retornar no transporte de horário correspondente;</li>
+                      <li>Em caso de perda de horário, a Nokia não se responsabiliza por eventuais gastos para que você chegue ao trabalho de outras formas. Você pode pegar o transporte da volta (de acordo com o seu horário de inscrição) normalmente;</li>
+                      <li> Caso você perca o seu horário, poderá viajar em outro horário se – e somente se- houver vaga sentado, sendo prioridade os passageiros inscritos para o horário em questão;</li>
+                      <p>Todos os dias, na ida e volta do transporte, será verificada a presença de cada colaborador inscrito, o usuário que apresentar frequência menor do que 3 dias na semana sem justificativa será convidado a ceder sua vaga para os colaboradores que estiverem na lista de espera.<br><br>Em caso de dúvidas, entre em contato através do email: <a href="mailto:cristina.capitina@nokia.com" class="standard">cristina.capitina@nokia.com</a></p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <img src="http://placehold.it/400x300" alt="">
+            </div>
         </div>
       </div>
     </div>
