--- a/pt/modern.html
+++ b/pt/modern.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#"><img class="flag" src="../assets/img/flag-br.png"></a></li>
-            <li class="hide"><a href="../en" data-toggle="tooltip" title="English"><img class="flag" src="../assets/img/flag-us.png"></a></li>
+            <li><a href="../en" data-toggle="tooltip" title="English"><img class="flag" src="../assets/img/flag-us.png"></a></li>
           </ul>
         </div>
       </div>
