Added new Bubbles section PT/EN. Changes on Eng texts

--- a/en/index.html
+++ b/en/index.html
@@ -56,10 +56,10 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="fayer-layer"><p>Welcome to the new office of Nokia in Sao Paulo! We will discover together a new environment of collaboration, productivity and motivation.</p>
-            <p>A workplace projected through concepts of modernity and orgainizational flexibility with a touch of innovation and comfort. Here, we want you to feel integrated with business and people of Nokia, feeling ready to evolve with us towards success!</p>
-            <p>Sinc our integration, we were waiting impatiently for the moment to be all together in a single place. Now, we are finally one only Nokia.</p>
-            <p>In this site, you will find all what you need to know about this new site: extensions, useful tips, office operation, site access, concepts of the corporate environment and virtual office, and even more, such as advantages of the location, E-Business Park, information of public transportation and more.</p>
+            <div class="fayer-layer"><p>Welcome to the new Nokia office in Sao Paulo! We will discover together a new environment of collaboration, productivity and motivation.</p>
+            <p>A workplace projected through concepts of modernity and organizational flexibility with a touch of innovation and comfort. Here, we want you to feel integrated to business and Nokia people, feeling ready to evolve with us towards success!</p>
+            <p>Since our integration, we were waiting impatiently for the moment to be all together in a single place. Now, we are finally one Nokia.</p>
+            <p>In this page, you will find all you need to know about the new office: extensions, useful tips, office operation, site access, concepts of the corporate environment and virtual office, and even more, such as advantages of the location E-Business Park, information of public transportation and more.</p>
             <p>Welcome!</p></div>
           </div>
         </div>
@@ -100,24 +100,53 @@
               <span class="cta">Click to see more</span>
             </div></a>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="col-xs-12 col-md-4">
+            <a href="transport.html" data-toggle="modal" data-target="#exampleModal"><div class="ns_tile_element home cta-left" id="element_with_image">
+              <span class="cta">Click to see more</span>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/workgroup.jpg">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>Bubbles</h2>
+                <p class="tile-paragraph">Check the largest areas already mapped as bubbles, aiming to keep people grouped by business.</p>
+              </div>
+            </div></a>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h3 class="modal-title" id="exampleModalLabel"><strong>Bubbles</strong>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span></h3>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>In this layout you can check the largest areas already mapped as bubbles, which are a suggestion of occupation aiming to keep people grouped by business and / or synergy with nearby areas. However, the office is flex, which means you can take anywhere you wish.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <a class="btn btn-success" style="color:White;" href="../assets/misc/bubbles.ppsx" target="_blank">Click here to know the suggestions of bubbles</a>
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
             <a href="transport.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Click to see more</span>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="../assets/img/map_preview.jpg">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
-                <h2>Location and transportation</h2>
+                <h2>Location and transport</h2>
                 <p class="tile-paragraph">See information about new site address, parking and charter transportation.</p>
               </div>
             </div></a>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="col-xs-12 col-md-4">
             <a href="rh.html"><div class="ns_tile_element home cta-right" id="element_with_image">
               <span class="cta">Click to see more</span>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/fachada.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>RH</h2>
                 <p class="tile-paragraph">See information and main contacts from Human Resources.</p>
               </div>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/fachada.png">
             </div></a>
           </div>
         </div>
