--- a/pt/index.html
+++ b/pt/index.html
@@ -100,24 +100,53 @@
               <span class="cta">Clique para ver mais</span>
             </div></a>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="col-xs-12 col-md-4">
+            <a href="transport.html" data-toggle="modal" data-target="#exampleModal"><div class="ns_tile_element home cta-left" id="element_with_image">
+              <span class="cta"> Clique para ver mais</span>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/workgroup.jpg">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>Bubbles</h2>
+                <p class="tile-paragraph">Neste layout você pode checar as maiores áreas já mapeadas como bubbles que são uma sugestão de ocupação visando manter as pessoas agrupadas por negócio. </p>
+              </div>
+            </div></a>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h3 class="modal-title" id="exampleModalLabel"><strong>Bubbles</strong>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span></h3>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Neste layout você pode checar as maiores áreas já mapeadas como bubbles, que são uma sugestão de ocupação visando manter as pessoas agrupadas por negócio e/ou sinergia com áreas próximas. No entanto, o escritório é flex, o que significa que você pode ocupar qualquer lugar que desejar.</p>
+                    </div>
+                    <div class="modal-footer">
+                      <a class="btn btn-success" style="color:White;" href="../assets/misc/bubbles.ppsx" target="_blank">Clique aqui para conhecer as sugestões de bubbles</a>
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
             <a href="transport.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="../assets/img/map_preview.jpg">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Localização e transporte</h2>
                 <p class="tile-paragraph">Veja informações de endereço do novo escritório, estacionamento e fretado</p>
               </div>
             </div></a>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="col-xs-12 col-md-4">
             <a href="rh.html"><div class="ns_tile_element home cta-right" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/fachada.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>RH</h2>
                 <p class="tile-paragraph">Veja aqui as informações e contatos principais de RH</p>
               </div>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/fachada.png">
             </div></a>
           </div>
         </div>
